--- a/public/fonts.css
+++ b/public/fonts.css
@@ -5,6 +5,12 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "XinYeNianTi";
+  src: url("XinYeNianTi.woff2");
+  font-display: swap;
+}
+
 /* https://github.com/microsoft/cascadia-code */
 @font-face {
   font-family: "Cascadia";
